kubernetes/apps/apps/seafile/seafile/app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:10.0-latest
          ports:
            - containerPort: 80
          #        - containerPort: 443
          #          name:  seafile-secure
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
              subPath: data
      volumes:
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: seafile
spec:
  selector:
    app: seafile
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
