kubernetes/apps/apps/seafile/seafile/app/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    
    spec:
      # nodeSelector:
      #   kubernetes.io/arch: amd64
      containers:
        - name: mariadb
          image: mariadb:13.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
              subPath: database
      volumes:
        - name: mariadb-data
          # emptyDir: {}
          persistentVolumeClaim:
            claimName: seafile-data
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
