kubernetes/apps/apps/seafile/seafile/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app seafile
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "10G"
    nginx.ingress.kubernetes.io/client-max-buffer-size: "10G"
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host seafile.icylair.com
      http:
       paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
    - host: &host seafile.cloud.icylair.com
      http:
       paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
  tls:
  - hosts:
      - seafile.icylair.com
      - seafile.cloud.icylair.com
    secretName: icylair-com-all-prod
